--- a/login.html
+++ b/login.html
@@ -11,7 +11,6 @@
 			.area {
 				margin: 20px auto 0px auto;
 			}
-			
 			.mui-input-group {
 				margin-top: 10px;
 			}
@@ -90,23 +89,23 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">登录</h1>
+			<h1 class="mui-title">Sign in</h1>
 		</header>
 		<div class="mui-content">
 			<form id='login-form' class="mui-input-group">
 				<div class="mui-input-row">
-					<label>账号</label>
-					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
+					<label style="font-size: 13px;">Account</label>
+					<input id='account' type="text" class="mui-input-clear mui-input" >
 				</div>
 				<div class="mui-input-row">
-					<label>密码</label>
-					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="请输入密码">
+					<label style="font-size: 13px;">password</label>
+					<input id='password' type="password" class="mui-input-clear mui-input" >
 				</div>
 			</form>
 			<form class="mui-input-group">
 				<ul class="mui-table-view mui-table-view-chevron">
 					<li class="mui-table-view-cell">
-						自动登录
+						auto login
 						<div id="autoLogin" class="mui-switch">
 							<div class="mui-switch-handle"></div>
 						</div>
@@ -114,8 +113,8 @@
 				</ul>
 			</form>
 			<div class="mui-content-padded">
-				<button id='login' class="mui-btn mui-btn-block mui-btn-primary">登录</button>
-				<div class="link-area"><a id='reg'>注册账号</a> <span class="spliter">|</span> <a id='forgetPassword'>忘记密码</a>
+				<button id='login' class="mui-btn mui-btn-block mui-btn-primary">Sign in</button>
+				<div class="link-area"><a id='reg'>Register an account</a> <span class="spliter">|</span> <a id='forgetPassword'>forget password</a>
 				</div>
 			</div>
 			<div class="mui-content-padded oauth-area">
