--- a/login.html
+++ b/login.html
@@ -142,8 +142,7 @@
 						main_loaded_flag = true;
 					});
 					var toMain = function() {
-						//使用定时器的原因：
-						//可能执行太快，main页面loaded事件尚未触发就执行自定义事件，此时必然会失败
+						//The reason for using the timer：
 						var id = setInterval(function () {
 							if(main_loaded_flag){
 								clearInterval(id);
@@ -152,7 +151,7 @@
 							}
 						},20);
 					};
-					//检查 "登录状态/锁屏状态" 开始
+					//Check "Login Status / Lock Screen Status" to start
 					if (settings.autoLogin && state.token && settings.gestures) {
 						$.openWindow({
 							url: 'unlock.html',
@@ -168,8 +167,8 @@
 						toMain();
 					} else {
 						app.setState(null);
-						//第三方登录
-						var authBtns = ['qihoo', 'weixin', 'sinaweibo', 'qq']; //配置业务支持的第三方登录
+						//Third party login
+						var authBtns = ['qihoo', 'weixin', 'sinaweibo', 'qq']; 
 						var auths = {};
 						var oauthArea = doc.querySelector('.oauth-area');
 						plus.oauth.getServices(function(services) {
@@ -179,7 +178,7 @@
 								if (~authBtns.indexOf(service.id)) {
 									var isInstalled = app.isInstalled(service.id);
 									var btn = document.createElement('div');
-									//如果微信未安装，则为不启用状态
+									//If the micro letter is not installed, it is not enabled
 									btn.setAttribute('class', 'oauth-btn' + (!isInstalled && service.id === 'weixin' ? (' disabled') : ''));
 									btn.authId = service.id;
 									btn.style.backgroundImage = 'url("images/' + service.id + '.png")'
@@ -188,39 +187,38 @@
 							}
 							$(oauthArea).on('tap', '.oauth-btn', function() {
 								if (this.classList.contains('disabled')) {
-									plus.nativeUI.toast('您尚未安装微信客户端');
+									plus.nativeUI.toast('You have not installed the microsecond client');
 									return;
 								}
 								var auth = auths[this.authId];
 								var waiting = plus.nativeUI.showWaiting();
 								auth.login(function() {
 									waiting.close();
-									plus.nativeUI.toast("登录认证成功");
+									plus.nativeUI.toast("Login authentication is successful");
 									auth.getUserInfo(function() {
-										plus.nativeUI.toast("获取用户信息成功");
+										plus.nativeUI.toast("Get user information successfully");
 										var name = auth.userInfo.nickname || auth.userInfo.name;
 										app.createState(name, function() {
 											toMain();
 										});
 									}, function(e) {
-										plus.nativeUI.toast("获取用户信息失败：" + e.message);
+										plus.nativeUI.toast("Failed to get user information：" + e.message);
 									});
 								}, function(e) {
 									waiting.close();
-									plus.nativeUI.toast("登录认证失败：" + e.message);
+									plus.nativeUI.toast("Login authentication failed：" + e.message);
 								});
 							});
 						}, function(e) {
 							oauthArea.style.display = 'none';
-							plus.nativeUI.toast("获取登录认证失败：" + e.message);
+							plus.nativeUI.toast("Failed to get login authentication：" + e.message);
 						});
 					}
 					// close splash
 					setTimeout(function() {
-						//关闭 splash
+						//close splash
 						plus.navigator.closeSplashscreen();
 					}, 600);
-					//检查 "登录状态/锁屏状态" 结束
 					var loginButton = doc.getElementById('login');
 					var accountBox = doc.getElementById('account');
 					var passwordBox = doc.getElementById('password');
@@ -294,7 +292,7 @@
 						if (backButtonPress > 1) {
 							plus.runtime.quit();
 						} else {
-							plus.nativeUI.toast('再按一次退出应用');
+							plus.nativeUI.toast('Press again to exit the application');
 						}
 						setTimeout(function() {
 							backButtonPress = 0;
