字体大小调整

--- a/reg.html
+++ b/reg.html
@@ -44,19 +44,19 @@
 		<div class="mui-content">
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-					<label>account</label>
+					<label style="font-size: 13px;">account</label>
 					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="   Please input Username">
 				</div>
 				<div class="mui-input-row">
-					<label>password</label>
-					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="     Please enter your password">
+					<label style="font-size: 13px;">password</label>
+					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="  Please enter your password">
 				</div>
 				<div class="mui-input-row">
-					<label>confirm</label>
-					<input id='password_confirm' type="password" class="mui-input-clear mui-input" placeholder="  Please confirm your password">
+					<label style="font-size: 13px;">confirm</label>
+					<input id='password_confirm' type="password" class="mui-input-clear mui-input" placeholder=" Please confirm your password">
 				</div>
 				<div class="mui-input-row">
-					<label>mailbox</label>
+					<label style="font-size: 13px;">mailbox</label>
 					<input id='email' type="email" class="mui-input-clear mui-input" placeholder="  please input your email">
 				</div>
 			</form>
