--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
 			<form class="mui-input-group">
 				<ul class="mui-table-view mui-table-view-chevron">
 					<li class="mui-table-view-cell">
-						auto login
+						<label style="font-size: 13px;">auto login</label>
 						<div id="autoLogin" class="mui-switch">
 							<div class="mui-switch-handle"></div>
 						</div>
