--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -90,7 +90,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">登录</h1>
+			<h1 class="mui-title"><span class="lang" data-locale="login"></span></h1>
 		</header>
 		<div class="mui-content">
 			<form id='login-form' class="mui-input-group">
@@ -125,12 +125,16 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.enterfocus.js"></script>
 		<script src="../../js/app.js"></script>
+		<script src="../../js/knockout-3.4.2.js"></script>
+		<script src="../../js/jquery-3.2.0.min.js"></script>
+		<script src="../../js/language.js"></script>
 		<script>
 			(function($, doc) {
 				$.init({
 					statusBarBackground: '#f7f7f7'
 				});
 				$.plusReady(function() {
+					
 					plus.screen.lockOrientation("portrait-primary");
 					var settings = app.getSettings();
 					var state = app.getState();
