--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -5,70 +5,117 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
-		<link href="css/mui.min.css" rel="stylesheet" />
-		<link href="css/style.css" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/style.css" rel="stylesheet" />
 		<style>
 			.area {
 				margin: 20px auto 0px auto;
 			}
-			.mui-input-group:first-child {
+			
+			.mui-input-group {
 				margin-top: 20px;
 			}
+			
 			.mui-input-group label {
-				width: 22%;
+				width: 30%;
 			}
+			
 			.mui-input-row label~input,
 			.mui-input-row label~select,
 			.mui-input-row label~textarea {
-				width: 78%;
+				width: 70%;
 			}
+			
 			.mui-checkbox input[type=checkbox],
 			.mui-radio input[type=radio] {
 				top: 6px;
 			}
+			
 			.mui-content-padded {
 				margin-top: 25px;
 			}
+			
 			.mui-btn {
 				padding: 10px;
 			}
 			
+			#avatar {
+				width: 100%;
+				height: 15%;
+				text-align: center;
+				margin-top: 20px;
+			}
+			
+			#avatar img {
+				border-radius: 50%;
+			}
+			
+			#address {
+				display: inline-block;
+				margin-right: 10px;
+			}
 		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">注册</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
+			<a class="lang" data-locale="back"></a>
+			<h1 class="mui-title"><span class="lang" data-locale="user-login"></span></h1>
+			<a class="mui-icon mui-icon-closeempty mui-pull-right"></a>
 		</header>
 		<div class="mui-content">
-			<form class="mui-input-group">
-				<div class="mui-input-row">
-					<label>账号</label>
-					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
+			<div id="avatar">
+				<img src="../../images/user-photo.png">
+			</div>
+			<form>
+				<div class="mui-input-group">
+					<div class="mui-input-row">
+						<label class="lang" data-locale="email"></label>
+						<input id='account' type="text" class="mui-input-clear mui-input lang" data-locale="please-input-email">
+					</div>
+					<div class="mui-input-row">
+						<label class="lang" data-locale="username"></label>
+						<input id='password' type="password" class="mui-input-clear mui-input lang" data-locale="please-input-username">
+					</div>
+					<div class="mui-input-row">
+						<label class="lang" data-locale="password"></label>
+						<input id='password_confirm' type="password" class="mui-input-clear mui-input lang" data-locale="please-input-password">
+					</div>
+					<div class="mui-input-row">
+						<label class="lang" data-locale="password-confirm"></label>
+						<input id='email' type="email" class="mui-input-clear mui-input lang" data-locale="please-confirm-password">
+					</div>
+					<div class="mui-input-row">
+						<label class="lang" data-locale="address"></label>
+						<label class="lang" data-locale="address-details"></label>
+						<input id='email' type="email" class="mui-input-clear mui-input">
+						<a class="mui-navigate-right"></a>
+					</div>
 				</div>
-				<div class="mui-input-row">
-					<label>密码</label>
-					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="请输入密码">
-				</div>
-				<div class="mui-input-row">
-					<label>确认</label>
-					<input id='password_confirm' type="password" class="mui-input-clear mui-input" placeholder="请确认密码">
-				</div>
-				<div class="mui-input-row">
-					<label>邮箱</label>
-					<input id='email' type="email" class="mui-input-clear mui-input" placeholder="请输入邮箱">
+
+				<div class="mui-input-group">
+					<div class="mui-input-row">
+						<label class="lang" data-locale="introduction-code"></label>
+						<input id='email' type="email" class="mui-input-clear mui-input lang" data-locale="please-input-introduction-code">
+					</div>
+					<div class="mui-input-row">
+						<label class="lang" data-locale="verification-code"></label>
+						<input id='email' type="email" class="mui-input-clear mui-input lang" data-locale="please-input-verification-code">
+					</div>
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='reg' class="mui-btn mui-btn-block mui-btn-primary">注册</button>
+				<button id='reg' class="mui-btn mui-btn-block mui-btn-danger lang" data-locale="register"></button>
 			</div>
 			<div class="mui-content-padded">
-				<p>注册真实可用，注册成功后的用户可用于登录，但是示例程序并未和服务端交互，用户相关数据仅存储于本地。</p>
+				<p class="lang" data-locale="register-tips"></p>
 			</div>
 		</div>
-		<script src="js/mui.min.js"></script>
-		<script src="js/app.js"></script>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/app.js"></script>
+		<script src="../../js/jquery-3.2.0.min.js"></script>
+		<script src="../../js/language.js"></script>
 		<script>
 			(function($, doc) {
 				$.init();
@@ -86,12 +133,12 @@
 							email: emailBox.value
 						};
 						var passwordConfirm = passwordConfirmBox.value;
-						if (passwordConfirm != regInfo.password) {
+						if(passwordConfirm != regInfo.password) {
 							plus.nativeUI.toast('密码两次输入不一致');
 							return;
 						}
 						app.reg(regInfo, function(err) {
-							if (err) {
+							if(err) {
 								plus.nativeUI.toast(err);
 								return;
 							}
@@ -101,17 +148,17 @@
 							 * 1、因本示例应用启动页就是登录页面，因此注册成功后，直接显示登录页即可；
 							 * 2、如果真实案例中，启动页不是登录页，则需修改，使用mui.openWindow打开真实的登录页面
 							 */
-							plus.webview.getLaunchWebview().show("pop-in",200,function () {
+							plus.webview.getLaunchWebview().show("pop-in", 200, function() {
 								plus.webview.currentWebview().close("none");
 							});
 							//若启动页不是登录页，则需通过如下方式打开登录页
-//							$.openWindow({
-//								url: 'login.html',
-//								id: 'login',
-//								show: {
-//									aniShow: 'pop-in'
-//								}
-//							});
+							//							$.openWindow({
+							//								url: 'login.html',
+							//								id: 'login',
+							//								show: {
+							//									aniShow: 'pop-in'
+							//								}
+							//							});
 						});
 					});
 				});
