--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -8,30 +8,50 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/style.css" rel="stylesheet" />
 		<style>
+			.mui-content {
+				background-color: #FFFFFF;
+			}
+			
+			.login-panel {
+				margin: 15px;
+			}
+			
+			li {
+				list-style: none;
+			}
+			
 			#weixin-oauth {
 				background-color: forestgreen;
 			}
 			
-			#email-login {
-				background-color: gainsboro;
-			}
-			
-			.mui-table-view {
-				margin-left: 15px;
-				margin-right: 15px;
-				margin-bottom: 15px;
-			}
-			
 			.mui-table-view-cell span {
 				color: white;
+				height: 100%;
+				display: inline-block;
+				vertical-align: middle;
 				text-align: center;
 			}
 			
-			#protocol-agreement {
-				margin-left: 100px;
+			#forget_password {
+				color: #FF0000;
+			}
+			
+			#email-login-form {
+				margin-top: 30px;
+			}
+			
+			.app-icons {
+				width: 10%;
+				float: left;
+			}
+			
+			.app-msg {
+				width: 80%;
+				float: left;
+				text-align: center;
+				margin-top: 8px;
 			}
 		</style>
-
 	</head>
 
 	<body>
@@ -41,27 +61,32 @@
 			<h1 class="mui-title"><span class="lang" data-locale="login"></span></h1>
 		</header>
 		<div class="mui-content">
-			<ul class="mui-table-view">
+			<div class="login-panel">
 				<li class="mui-table-view-cell" id="weixin-oauth">
 					<div>
-						<img src="../../images/weixin.png" />
-						<span class="lang" data-locale="wechat_login"></span>
+						<div class="app-icons"><img src="../../images/weixin.png" /></div>
+						<div class="app-msg"><span class="lang" data-locale="wechat_login"></span></div>
 						<a class="mui-navigate-right"></a>
 					</div>
 				</li>
-				<li class="mui-table-view-cell" id="email-login">
-					<div>
-						<img src="../../images/weixin.png" />
-						<span class="lang" data-locale="email_login"></span>
-						<a class="mui-navigate-right"></a>
-					</div>
+				<li>
+					<form id="email-login-form">
+						<div class="mui-input-group">
+							<div class="mui-input-row">
+								<label class="lang" data-locale="email"></label>
+								<input id='account' type="text" class="mui-input-clear mui-input lang" data-locale="please-input-email">
+							</div>
+							<div class="mui-input-row">
+								<label class="lang" data-locale="password"></label>
+								<input id='password_confirm' type="password" class="mui-input-clear mui-input lang" data-locale="please-input-password">
+							</div>
+						</div>
+						<div class="mui-content-padded">
+							<button id='reg' class="mui-btn mui-btn-block mui-btn-danger lang" data-locale="login"></button>
+						</div>
+					</form>
 				</li>
-			</ul>
-			<div id="protocol-agreement">
-				<div class="mui-input-row mui-radio mui-left">
-					<label class="lang" data-locale="protocol_agreement"></label>
-					<input name="protocol_agreement" type="radio">
-				</div>
+				<div class="mui-text-right lang" id="forget_password" data-locale="forget_password"></div>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
@@ -73,7 +98,7 @@
 		<script>
 			(function($, doc) {
 				$.init({
-					statusBarBackground: '#f7f7f7'
+					statusBarBackground: '#FFFFFF'
 				});
 				$.plusReady(function() {
 					plus.screen.lockOrientation("portrait-primary");
@@ -142,24 +167,7 @@
 						plus.navigator.closeSplashscreen();
 					}, 600);
 					//检查 "登录状态/锁屏状态" 结束
-					
-					var emailLoginButton = doc.getElementById('email-login');
-					emailLoginButton.addEventListener('tap', function(event) {
-						console.log("click emailLoginButton");
-						$.openWindow({
-							url:'reg.html',
-							id:'reg',
-							show:{
-								aniShow:'pop-in'
-							},
-							waiting:{
-								autoShow:false
-							}
-						});
-					});
-					window.addEventListener('resize', function() {
-						oauthArea.style.display = document.body.clientHeight > 400 ? 'block' : 'none';
-					}, false);
+
 					var backButtonPress = 0;
 					$.back = function(event) {
 						backButtonPress++;
