--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -3,95 +3,248 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
-		<link href="css/mui.min.css" rel="stylesheet" />
-
+		<title>Hello MUI</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<link rel="stylesheet" href="../../css/mui.min.css">
+		<link rel="stylesheet" href="../../css/icons-extra.css">
 		<style>
-			ul {
-				font-size: 14px;
-				color: #8f8f94;
-			}
-			.mui-btn {
-				padding: 10px;
+			html,
+			body {
+				background-color: #efeff4;
 			}
 		</style>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav" style="padding-right: 15px;">
-			<h1 class="mui-title">登录模板</h1>
-			<button id='setting' class=" mui-pull-right mui-btn-link">设置</button>
-		</header>
-		<div class="mui-content">
-			<div class="mui-content-padded">
-				<p>
-					您好 <span id='account'></span>，您已成功登录。
-					<ul>
-						<li>这是mui带登录和设置模板的示例App首页。</li>
-						<li>您可以点击右上角的 “设置” 按钮，进入设置模板，体验div窗体切换示例。</li>
-						<li>在 “设置” 中点击 “退出” 可以 “注销当前账户” 或 “直接关闭应用”。</li>
-						<li>你可以设置 “锁屏图案”，这样可通过手势密码代替输入账号、密码；</li>
-					</ul>
-				</p>
-				<!--<button  class="mui-btn mui-btn-block mui-btn-primary">设置</button>-->
-				<!--
-				<button id='exit' class="mui-btn mui-btn-block mui-btn-green">关闭</button>
-                <button id='logout' class="mui-btn mui-btn-red mui-btn-block">注销登录</button>
-                -->
-			</div>
-		</div>
-		<script src="js/mui.min.js"></script>
-		<script src="js/app.js"></script>
-		<script>
-			(function($, doc) {
-				$.init();
-				var settings = app.getSettings();
-				var account = doc.getElementById('account');
-				//
-				window.addEventListener('show', function() {
-					var state = app.getState();
-					account.innerText = state.account;
-				}, false);
-				$.plusReady(function() {
-					var settingPage = $.preload({
-						"id": 'setting',
-						"url": 'setting.html'
-					});
-					//设置
-					var settingButton = doc.getElementById('setting');
-					//settingButton.style.display = settings.autoLogin ? 'block' : 'none';
-					settingButton.addEventListener('tap', function(event) {
-						$.openWindow({
-							id: 'setting',
-							show: {
-								aniShow: 'pop-in'
-							},
-							styles: {
-								popGesture: 'hide'
-							},
-							waiting: {
-								autoShow: false
-							}
-						});
-					});
-					//--
-					$.oldBack = mui.back;
-					var backButtonPress = 0;
-					$.back = function(event) {
-						backButtonPress++;
-						if (backButtonPress > 1) {
-							plus.runtime.quit();
-						} else {
-							plus.nativeUI.toast('再按一次退出应用');
+		<!--<header class="mui-bar mui-bar-nav">
+			<a class="mui-icon mui-pull-left" id="yonghu">
+						<img src="../../images/user-photo.png" style="width: 35px; height: 35px;border-radius: 50%;margin-top: -0.2em;"  />
+			</a>
+			<h1 id="title" class="mui-title">Home</h1>
+			<a class="mui-icon-extra mui-icon-extra-notice mui-pull-right" style="margin-top: 0.4em;" id="offCanvasShow"></a>
+			<a class="mui-icon mui-icon-search mui-pull-right" ></a>
+		</header>-->
+		<nav class="mui-bar mui-bar-tab">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="home.html">
+				<span class="mui-icon mui-icon-home"></span>
+				<span class="mui-tab-label">Home</span>
+			</a>
+			<a class="mui-tab-item" href="products/product_login.html">
+				<span class="mui-icon mui-icon-paperplane"></span>
+				<span class="mui-tab-label">Merchandise landing</span>
+			</a>
+			<a class="mui-tab-item" href="products/request.html">
+				<span class="mui-icon mui-icon-eye"></span>
+				<span class="mui-tab-label">Commodity status</span>
+			</a>
+		</nav>
+		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" charset="utf-8">
+//			var main, menu, mask = mui.createMask(_closeMenu);
+//			var showMenu = false;
+			
+			/**
+			 * Close the skid menu
+			 */
+//			function closeMenu(){
+//				_closeMenu();
+//				mask.close();
+//			}
+			/**
+			 * Close the skid menu (business section)
+			 */
+//			function _closeMenu() {
+//				if (showMenu) {
+//					//Resolve android 4.4 The following versions of webview are moved, resulting in fixed positioning elements of the bug;
+//					if (mui.os.android && parseFloat(mui.os.version) < 4.4) {
+//						document.querySelector("header.mui-bar").style.position = "fixed";
+//						//Also need to modify the following padding-top of .mui-contnt，Otherwise it will be more blank;
+//						//document.querySelector(".mui-bar-nav~.mui-content").style.paddingTop = "44px";
+//					}
+//					menu.setStyle({
+//						left: '100%',
+//						transition: {
+//							duration: 150
+//						}
+//					});
+//					setTimeout(function(){
+//						menu.hide();
+//					}, 300);
+//					showMenu = false;
+//				}
+//			}
+			
+			if (!mui.os.android) {
+				//The overall slide temporarily support android phone, because the two pages of mobile animation, can not guarantee synchronization;
+				document.getElementById("move-togger").classList.remove('mui-hidden');
+				var spans = document.querySelectorAll('.android-only');
+				for (var i=0,len=spans.length;i<len;i++) {
+					spans[i].style.display = "none";
+				}
+			}
+			 //mui initialization
+			mui.init({
+				swipeBack: false
+				//beforeback: back
+			});
+			
+//			function back() {
+//				if (showMenu) {
+//					//The menu is in the display state, the return key should first close the menu, prevent the main window to perform mui.back logic;
+//					closeMenu();
+//					return false;
+//				} else {
+//					//The menu is in the hidden state, the implementation of the return, the first close the menu page, and then continue to perform mui.back logic to close the main window;
+//					menu.close('none');
+//					return true;
+//				}
+//			}
+			var subpages = ['home.html', 'products/product_login.html', 'products/request.html'];
+			var subpage_style = {
+				top: '0px',
+				bottom: '51px'
+			};
+			
+			var aniShow = {};
+			
+			 //Create subpage, first tab page display, others are hidden;
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				for (var i = 0; i < 4; i++) {
+					var temp = {};
+					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
+					if (i > 0) {
+						sub.hide();
+					}else{
+						temp[subpages[i]] = "true";
+						mui.extend(aniShow,temp);
+					}
+					self.append(sub);
+				}
+				
+				main = plus.webview.currentWebview();
+				setTimeout(function(){
+					menu = mui.preload({
+						id: 'offcanvas-drag-left-plus-menu',
+						url: 'offcanvas-drag-left-plus-menu.html',
+						styles: {
+							left: '30%',
+							width: '70%',
+							zindex: 9997
 						}
-						setTimeout(function() {
-							backButtonPress = 0;
-						}, 1000);
-						return false;
-					};
-				});
-			}(mui, document));
+					});
+				}, 300);
+			});
+			
+			/**
+			 * display menu
+			 */
+//			function openMenu() {
+//				if (!showMenu) {
+//					//Resolve android 4.4 The following versions of webview are moved, resulting in fixed positioning elements of the bug;
+//					if (mui.os.android && parseFloat(mui.os.version) < 4.4) {
+//						document.querySelector("header.mui-bar").style.position = "static";
+//						//Also need to modify the following. Mui-content padding-top, otherwise it will be more blank;
+//						//document.querySelector(".mui-bar-nav~.mui-content").style.paddingTop = "0px";
+//					}
+//					menu.show('none', 0, function() {
+//						menu.setStyle({
+//							left: '30%',
+//							transition: {
+//								duration: 150
+//							}
+//						});
+//						mask.show();
+//						showMenu = true;
+//					});
+//				}
+//			}
+//			
+//			document.querySelector(".mui-icon-extra-notice").addEventListener("tap", openMenu);
+//			window.addEventListener("dragright", function(e){
+//				e.detail.gesture.preventDefault();
+//			});
+//			window.addEventListener("dragleft", function(e){
+//				e.detail.gesture.preventDefault();
+//			});
+//			window.addEventListener("swiperight", openMenu);
+//			window.addEventListener("swipeleft", closeMenu);
+//			window.addEventListener("menu:swiperight", closeMenu);
+//			mui.menu = function() {
+//				if (showMenu) {
+//					closeMenu();
+//				} else{
+//					openMenu();
+//				}
+//			}
+//			
+//			var backFirst = null;
+//			mui.back = function() {
+//				if (showMenu) {
+//					closeMenu();
+//					return;
+//				}
+//				if (!backFirst) {
+//					backFirst = new Date().getTime();
+//					mui.toast('Press again to exit the application');
+//					setTimeout(function(){
+//						backFirst = null;
+//					}, 1000);
+//				} else{
+//					if ((new Date()).getTime() - backFirst < 1000) {
+//						plus.runtime.quit();
+//					}
+//				}
+//			}
+			 //Current activation option
+			var activeTab = subpages[0];
+			var title = document.getElementById("title");
+			 //Tab click event
+			mui('.mui-bar-tab').on('tap', 'a', function(e) {
+				var targetTab = this.getAttribute('href');
+				if (targetTab == activeTab) {
+					return;
+				}
+				//Replace the title
+				//title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
+				//The Target tab is displayed
+				//If the iOS platform or non-first display, it is displayed directly
+				if(mui.os.ios||aniShow[targetTab]){
+					plus.webview.show(targetTab);
+				}else{
+					//Otherwise, use the fade-in animation and save the variable
+					var temp = {};
+					temp[targetTab] = "true";
+					mui.extend(aniShow,temp);
+					plus.webview.show(targetTab,"fade-in",300);
+				}
+				//Hide the current
+				plus.webview.hide(activeTab);
+				//Change the currently active tab
+				activeTab = targetTab;
+			});
+			 //Custom Events, Simulation Click "Home Tab"
+			document.addEventListener('gohome', function() {
+				var defaultTab = document.getElementById("defaultTab");
+				//Simulation home page click
+				mui.trigger(defaultTab, 'tap');
+				//The Toggle tab is highlighted
+				var current = document.querySelector(".mui-bar-tab>.mui-tab-item.mui-active");
+				if (defaultTab !== current) {
+					current.classList.remove('mui-active');
+					defaultTab.classList.add('mui-active');
+				}
+			});
+			//User page
+//		document.getElementById('yonghu').addEventListener('tap', function() {
+//			//Open about the page
+//			mui.openWindow({
+//				url: './user/user.html',
+//				id: 'user'
+//			});
+//		});
 		</script>
 	</body>
 
