修改用户默认头像显示标签src路径

--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -97,7 +97,7 @@
 		</header>
 		<div class="mui-content">
 			<div id="avatar">
-				<img src="../../images/user-photo.png">
+				<img src="../../images/userPhoto.png"/>
 			</div>
 			<form id="regForm" method="post">
 				<!-- email -->
