--- a/kankan/pages/main/pullrefresh_sub.html
+++ b/kankan/pages/main/pullrefresh_sub.html
@@ -441,8 +441,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.pullToRefresh.js"></script>
 		<script src="../../js/mui.pullToRefresh.material.js"></script>
-		<script>
-			///////////////////detail page///////////////////////////
+		<script type="text/javascript" charset="UTF-8">
 			var ws = null;
 			var regPage = null;
 			mui.plusReady(function() {
