--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -156,7 +156,7 @@
 				</div>
 				<!-- submit button -->
 				<div class="mui-content-padded">
-					<button id='reg' type="submit" class="mui-btn mui-btn-block mui-btn-danger lang" data-locale="register"></button>
+					<button id='reg' type="button" class="mui-btn mui-btn-block mui-btn-danger lang" data-locale="register"></button>
 				</div>
 			</form>
 
@@ -175,142 +175,21 @@
 		<script src="../../js/picker/city.data.js"></script>
 		<script src="../../js/sha256.js"></script>
 		<script src="../../js/common.js"></script>
-		<script>
-			$().ready(function() {
-				/**
-				$("#regForm").validate({
-					rules: {
-						email: {
-							required: true,
-							email: true
-						},
-						username: {
-							required: true,
-							minlength: 3,
-							maxlength: 20
-						}
-					}
-				});
-				**/
-				/**
-					Repository.User.getProvinceList({
-						data: {
-
-						},
-						success: function(d) {
-							if(d.result.status == "OK") {
-								
-							} else {
-
-							}
-						}
+		<script type="text/javascript" charset="utf-8">
+			(function(mui, doc){
+				mui.init();
+				mui.plusReady(function(){
+					console.log("reg page plus ready...");
+					var sendVCodeBtn = doc.getElementById('send-verification-code');
+					sendVCodeBtn.addEventListener('tap', function(event){
+						console.log("click sendVCodeBtn");
 					});
-					**/
-			});
-			(function(mui, doc) {
-					mui.init();
-					mui.plusReady(function() {
-						console.log("reg.html plus ready");
-						var settings = app.getSettings();
-						var emailBox = doc.getElementById('email');
-						var usernameBox = doc.getElementById("username");
-						var passwordBox = doc.getElementById('password');
-						var passwordConfirmBox = doc.getElementById('passwordConfirm');
-						var addressBox = doc.getElementById("address");
-						var vCodeBox = doc.getElementById("verificationCode");
-						var sendVCodeButton = doc.getElementById("send-verification-code");
-						var showCityPickerButton = doc.getElementById('showCityPicker');
-						var introductionCodeBox = doc.getElementById("introduction-code");
-						var regButton = doc.getElementById('reg');
-						var cityPicker = new mui.PopPicker({
-							layer: 2
-						});
-						cityPicker.setData(cityData);
-						showCityPickerButton.addEventListener('tap', function(event) {
-							cityPicker.show(function(items) {
-								$('#city').val(items[0].text + " " + items[1].text);
-							});
-						}, false);
-
-						var validform = function() {
-							console.log("开始表单验证");
-							return $('#regForm').validate({
-								rules: {
-									email: {
-										required: true,
-										email: true
-									},
-									username: {
-										required: true,
-										minlength: 3,
-										maxlength: 20
-									},
-									password: {
-										required: true,
-										minlength: 3,
-										maxlength: 20
-									},
-									passwordConfirm: {
-										required: true,
-										minlength: 3,
-										maxlength: 20,
-										equalTo: "#password"
-									},
-									city: "required",
-									verificationCode: "required"
-								}
-							});
-						};
-
-						sendVCodeButton.addEventListener('tap', function(event) {
-							if(!validform().form()) {
-								console.log("表单验证未通过。");
-								return false;
-							} else {
-								console.log("表单验证通过。");
-								Repository.User.checkEmail({
-									data: {
-										email: emailBox.value
-									},
-									success: function(d) {
-										console.log("checkEmail success...");
-										console.dir(d);
-										if(d.result.status == "OK") {
-											console.log("check email ok");
-										} else {
-											console.log("check email ng");
-										}
-									}
-								});
-							}
-						}, false);
-
-						regButton.addEventListener('tap', function(event) {
-							if(!validform().form()) {
-								console.log("表单验证未通过。");
-								return false;
-							} else {
-								console.log("表单验证通过。");
-								Repository.User.register({
-										data: {
-											email: emailBox.value,
-											username: usernameBox.value,
-											password: passwordBox.value,
-											address: addressBox.value,
-										},
-										success: function(d) {
-											console.log("register success...");
-											console.dir(d);
-											if(d.result.status == "OK") {
-												console.log("check email ok");
-											} else {
-												console.log("check email ng");
-											}
-										}
-									}
-								}, false);
-						});
-					}(mui, document));
+					var regBtn = doc.getElementById('reg');
+					regBtn.addEventListener('tap', function(event){
+						console.log("click regBtn");
+					});
+				});
+			})(mui, document);
 		</script>
 	</body>
 
